cf_analysis_results/checkerframework_results/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8.txt
../../../../datasets/june2020_dataset/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/communication/xboard/EngineController.java:58: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1358 $$ java.util.Scanner $$ regular method exit $$ ( 1609, 1644 ) $$ @MustCall method close may not have been invoked on temp-var-1358 or any of its aliases.
      commandScanner.useDelimiter("\\s+");
                                 ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/communication/xboard/EngineController.java:164: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1396 $$ java.util.Scanner $$ regular method exit $$ ( 4450, 4481 ) $$ @MustCall method close may not have been invoked on temp-var-1396 or any of its aliases.
            commandScanner.useDelimiter("");
                                       ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/communication/xboard/EngineController.java:213: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1409 $$ java.util.Scanner $$ regular method exit $$ ( 5644, 5675 ) $$ @MustCall method close may not have been invoked on temp-var-1409 or any of its aliases.
            commandScanner.useDelimiter("");
                                       ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/communication/xboard/UserController.java:55: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1459 $$ java.util.Scanner $$ regular method exit $$ ( 1540, 1575 ) $$ @MustCall method close may not have been invoked on temp-var-1459 or any of its aliases.
      commandScanner.useDelimiter("\\s+");
                                 ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
Note: ../../../../datasets/june2020_dataset/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/testing/time/ClockTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors
